Desarrollo de la estructura.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
     <script src="sketch.js"></script>
     <div class="container">
-      <h1>Jueguemos a las charadas</h1>
+      <h1>Juguemos a las charadas</h1>
       <p>
         Este es un juego en el que podrás dibujar con tu dedo frente a la cámara
         y nuestro sistema intentará adivinar qué es lo que estás dibujando En
@@ -31,6 +31,16 @@
         lograr con la I.A.
       </p>
       <p>¿Listo para empezar?</p>
+    </div>
+
+    <div class="game-container">
+      <div class="canvas-container" id="sketch-container"></div>
+      <!-- Contenedor instrucciones -->
+      <div class="instructions-container">
+        <h2>¡Reto!</h2>
+        <p>Dibuja una manzana</p>
+        <p>Recuerda, tienes tiempo limitado. Buena suerte</p>
+      </div>
     </div>
   </body>
 </html>
