Se modifica el CSS

--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
 
   <body>
     <script src="sketch.js"></script>
-
     <div class="container">
       <h1>Dibuja el personaje</h1>
 
@@ -67,18 +66,14 @@
     </div>
 
     <div class="game-container">
-      <div class="canvas-container" id="sketch-container">
-        <!-- Video de la cámara -->
-        <video id="video" autoplay></video>
-        <!--<canvas id="canvas"></canvas>-->
-        <!-- Contenedor de la imagen y el texto -->
-        <div class="image-container">
-          <h2>Dibuja el personaje que ves aquí</h2>
-          <img
-            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTr5x17rV6LBX1E8dv6C-cUVBRcPEIYwqSsWQ&s"
-            alt="Personaje"
-          />
-        </div>
+      <div class="canvas-container" id="sketch-container"></div>
+      <!-- Contenedor de la imagen y el texto -->
+      <div class="image-container">
+        <h2>Dibuja el personaje que ves aquí</h2>
+        <img
+          src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTr5x17rV6LBX1E8dv6C-cUVBRcPEIYwqSsWQ&s"
+          alt="Personaje"
+        />
       </div>
     </div>
   </body>
