Se mejora el código.

--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
         <h2>Dibuja el personaje que ves aquí</h2>
         <img
           id="character-image"
-          src="https://estaticos.elcolombiano.com/binrepository/842x1080/-179c0/1200d627/none/11101/NQXP/homero-simpson_42360908_20230512163831.jpg"
-          alt="Homero"
+          src="https://i.pinimg.com/564x/95/b6/57/95b657229390663eb69ea8a2850c21e7.jpg"
+          alt="Lisa"
         />
         <button id="next-button">Siguiente</button>
       </div>
