Se realizan los ajustes finales del proyecto.

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 
   <body>
     <script src="sketch.js"></script>
-    <!-- Enlazamos el archivo de p5.js -->
 
+    <!-- Contenedor informativo -->
     <div class="container">
       <h1>Dibuja el personaje</h1>
 
@@ -68,7 +68,7 @@
         </ol>
       </div>
     </div>
-
+    <!-- Contenedor del juego -->
     <div class="game-container">
       <div class="canvas-container" id="sketch-container"></div>
       <div class="image-container">
